objects/Approval_Setup_Step__c/Approval_Setup_Step__c.object-meta.xml
<CustomObject>
    <label>Approval Setup Step</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approval Setup Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>