objects/Approval_Setup_Step__c/fields/Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Service_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Center</label>
    <referenceTo>Service_Center__c</referenceTo>
    <relationshipLabel>PO Approval Setup Steps</relationshipLabel>
    <relationshipName>PO_Approval_Setup_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>